<resources>
    <string name="app_name">Tobat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tobat App</string>
    <string name="nav_header_subtitle">Apapun kondisinya shalatlah!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pengaturan</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="kompasactivity_name">Kompas Kiblat</string>
    <string name="appwidget_text">Subuh</string>
    <string name="appwidget_text2">Dzuhur</string>
    <string name="appwidget_text3">Ashar</string>
    <string name="appwidget_text4">Magrib</string>
    <string name="appwidget_text5">Isya</string>
    <string name="widgetSubuh">00:00</string>
    <string name="widgetDzuhur">00:00</string>
    <string name="widgetAshar">00:00</string>
    <string name="widgetMagrib">00:00</string>
    <string name="widgetIsya">00:00</string>
    <string name="add_widget">Add widget</string>
    <string name="menu_send">Send</string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="cari_kota">Cari Kota</string>
    <string name="cari_kota2">Cari Kota</string>
    <string name="cari">cari</string>
    <string name="lokasi_saya">Lokasi Saya</string>
    <string name="tanggal">Tanggal</string>
    <string name="jadwal_shalat">Jadwal Shalat</string>
    <string name="beranda">Beranda</string>
    <string name="kota_lain2">Kota Lain</string>
    <string name="kompas_kiblat2">Kompas Kiblat</string>
    <string name="pengaturan2">Pengaturan</string>
</resources>
